# CoAP_exprimentation

./: CMakeLists.txt
coap-esp32-led/: CMakeLists.txt  LICENSE  README.md  platformio.ini
coap-esp32-led/client/: client.py  control.py
coap-esp32-led/src/: COAP-LED-ESP.ino  Client.cpp  coap-simple.h  coap_server.cpp  coap_server.h  main.cpp
coap-web-bridge/: coap-led-V1.ino  package-lock.json  package.json  server.js
coap-web-bridge/public/: index.html  script.js  style.css
